--- a/gitops/apps/home-assistant/helpers-input-select-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-select-configmap.yaml
@@ -244,6 +244,14 @@ data:
         - living_room
       initial: bathroom
     
+  schedule_selector.yaml: |
+    schedule_selector:
+      name: Schedule Selector
+      options:
+        - weekday
+        - weekend
+      initial: weekday
+    
   time_window_selector.yaml: |
     time_window_selector:
       name: Time Window Selector
